package behavioral.state.remoteTV;

public interface IRemoteState {
    public void handle(RemoteControl remote);
}
