@startuml
'https://plantuml.com/class-diagram

class RemoteControl{
    + RemoteControl()
    + void setState(IRemoteState state)
    + void powerPress()
}

interface IRemoteState{
    + void handle(RemoteControl remote)
}

class OnState{
    + void handle(IRemoteState remote)
}

class OffState{}

RemoteControl --> IRemoteState:state
IRemoteState <|.. OnState
IRemoteState <|.. OffState
@enduml